# FastApiBasicAuth

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: lint.yml  release.yml  test.yml
requirements/: base.txt  dev.txt
src/fastapi_basic_auth/: __init__.py
src/fastapi_basic_auth/api/v1/: user.py
src/fastapi_basic_auth/schemas/: user.py
tests/: test_auth.py
